--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,32 +9,41 @@
   <meta name="keywords" content="HTML, CSS, JAVASCRIPT">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./css/media-queries.css">
 
   <title>Base Apparel coming soon page | Jose Angel Rey</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
 
-  We're coming soon
+  <div class="main-container">
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
+    <main class="main-content">
+      <h1 class="main-content__title">We're coming soon</h1>
+      <p class="main-content__description">
+        Hello fellow shoppers! We're currently building our new fashion store.
+        Add your email below to stay up-to-date with announcements and our launch deals.
+      </p>
+    </main>
+
+  </div>
+
+
+
 
   Email Address
-  
-    <!-- Attribution footer -->
-    <aside class="attribution">
-      <p>
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noreferrer noopener">Frontend Mentor</a>.</p>
-      <p>Coded by <a href="https://github.com/Jose-Angel-Rey" target="_blank" rel="noreferrer noopener">Jose Angel Rey</a></p>
-    </aside>
+
+  <!-- Attribution footer -->
+  <aside class="attribution">
+    <p>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        rel="noreferrer noopener">Frontend Mentor</a>.</p>
+    <p>Coded by <a href="https://github.com/Jose-Angel-Rey" target="_blank" rel="noreferrer noopener">Jose Angel Rey</a>
+    </p>
+  </aside>
 </body>
+
 </html>
