--- a/index.html
+++ b/index.html
@@ -21,20 +21,26 @@
 
   <div class="main-container">
 
+    <img src="./images/logo.svg" alt="" class="logo">
+
+    <img src="./images/hero-mobile.jpg" alt="" class="hero-photo">
+
+    <!-- Main content -->
     <main class="main-content">
       <h1 class="main-content__title">We're coming soon</h1>
       <p class="main-content__description">
         Hello fellow shoppers! We're currently building our new fashion store.
         Add your email below to stay up-to-date with announcements and our launch deals.
       </p>
+
+      <!-- Email -->
+      <label for="email">
+        <input type="email" name="email" id="input-email" placeholder="Email Address">
+        <input type="submit" value=">">
+      </label>
     </main>
 
   </div>
-
-
-
-
-  Email Address
 
   <!-- Attribution footer -->
   <aside class="attribution">
