--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Main content -->
     <main class="main-content">
-      <h1 class="main-content__title">We're coming soon</h1>
+      <h1 class="main-content__title">We're <span>coming soon</span></h1>
       <p class="main-content__description">
         Hello fellow shoppers! We're currently building our new fashion store.
         Add your email below to stay up-to-date with announcements and our launch deals.
