--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       </p>
 
       <!-- Email -->
-      <label for="email">
+      <label for="email" class="input-label">
         <input type="email" name="email" id="input-email" placeholder="Email Address">
-        <input type="submit" value=">">
+        <input type="submit" id="input-submit" value=">">
       </label>
     </main>
 
