--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
   </div>
 
   <!-- Attribution footer -->
-  <aside class="attribution">
+  <footer class="attribution">
     <p>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         rel="noreferrer noopener">Frontend Mentor</a>.</p>
     <p>Coded by <a href="https://github.com/Jose-Angel-Rey" target="_blank" rel="noreferrer noopener">Jose Angel Rey</a>
     </p>
-  </aside>
+  </footer>
 </body>
 
 </html>
