--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <img src="./images/logo.svg" alt="" class="logo">
 
-    <img src="./images/hero-mobile.jpg" alt="" class="hero-photo">
+    <div class="hero-photo"></div>
 
     <!-- Main content -->
     <main class="main-content">
