--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
       <!-- Email -->
       <form name="email-form" class="email-form">
-        <label for="email" class="input-label"></label>
-          <input type="email" name="email" id="input-email" placeholder="Email Address" autocomplete="false" required>
-          <div role="alert" aria-hidden="true" class="input-email__warning">Please provide a valid email</p>
+        <label for="input-email" class="input-label"></label>
+          <input type="email" name="input-email" id="input-email" placeholder="Email Address" autocomplete="false" required>
+          <div role="alert"  class="input-email__warning">Please provide a valid email</div>
         <button type="submit" class="btn-submit"><img src="./images/icon-arrow.svg" alt=""></button>
       </form>
 
