--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <!-- Email -->
       <form name="email-form" class="email-form">
         <label for="input-email" class="input-label"></label>
-          <input type="email" name="input-email" id="input-email" placeholder="Email Address" autocomplete="false" required>
-          <div role="alert"  class="input-email__warning">Please provide a valid email</div>
+        <input type="email" name="input-email" id="input-email" placeholder="Email Address" autocomplete="off">
+        <div role="alert" class="input-email__warning">Please provide a valid email</div>
         <button type="submit" class="btn-submit"><img src="./images/icon-arrow.svg" alt=""></button>
       </form>
 
@@ -56,6 +56,8 @@
     <p>Coded by <a href="https://github.com/Jose-Angel-Rey" target="_blank" rel="noreferrer noopener">Jose Angel Rey</a>
     </p>
   </footer>
+
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
