--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         Add your email below to stay up-to-date with announcements and our launch deals.
       </p>
 
-      <!-- Email -->
+      <!-- Form -->
       <form name="email-form" class="email-form">
         <label for="input-email" class="input-label"></label>
         <input type="email" name="input-email" id="input-email" placeholder="Email Address" autocomplete="off">
@@ -50,11 +50,8 @@
 
   <!-- Attribution footer -->
   <footer class="attribution">
-    <p>
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        rel="noreferrer noopener">Frontend Mentor</a>.</p>
-    <p>Coded by <a href="https://github.com/Jose-Angel-Rey" target="_blank" rel="noreferrer noopener">Jose Angel Rey</a>
-    </p>
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"rel="noreferrer noopener">Frontend Mentor</a>.</p>
+    <p>Coded by <a href="https://github.com/Jose-Angel-Rey" target="_blank" rel="noreferrer noopener">Jose Angel Rey</a></p>
   </footer>
 
   <script src="./js/app.js"></script>
