--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <label for="input-email" class="input-label"></label>
         <input type="email" name="input-email" id="input-email" placeholder="Email Address" autocomplete="off">
         <div role="alert" class="input-email__warning">Please provide a valid email</div>
-        <button type="submit" class="btn-submit"><img src="./images/icon-arrow.svg" alt=""></button>
+        <button type="submit" aria-label="undefined" class="btn-submit"><img src="./images/icon-arrow.svg" alt=""></button>
       </form>
 
     </main>
