--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Jose Angel Rey">
-  <meta name="description" content="Frontend Mentor challengue - FAQ Accordion Card">
+  <meta name="description" content="Frontend Mentor challengue - Base Apparel coming soon page">
   <meta name="keywords" content="HTML, CSS, JAVASCRIPT">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
