--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       </p>
 
       <!-- Form -->
-      <form name="email-form" class="email-form">
+      <form id="form" class="email-form" action="#" method="GET">
         <label for="input-email" class="input-label"></label>
         <input type="email" name="input-email" id="input-email" placeholder="Email Address" autocomplete="off">
         <div role="alert" class="input-email__warning">Please provide a valid email</div>
-        <button type="submit" aria-label="undefined" class="btn-submit"><img src="./images/icon-arrow.svg" alt=""></button>
+        <input type="submit" value=">" class="btn-submit">
       </form>
 
     </main>
